--- a/gst-plugin/configure.ac
+++ b/gst-plugin/configure.ac
@@ -19,6 +19,8 @@ AM_MAINTAINER_MODE([enable])
 
 dnl check for tools (compiler etc.)
 AC_PROG_CC
+AC_PROG_CXX
+AC_PROG_LIBTOOL
 
 dnl required version of libtool
 LT_PREREQ([2.2.6])
